--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
     <a href="https://www.w3schools.com/html/html_links.asp">How to use links</a>
 
 
-    <box2>
-      should be round
-    <box2>
+    <box2> 
+      2
+    </box2>
     
     <section>
-    <box>
+    <li>
       <h3 id="brainstorms">Brainstorms</h3>
     <h4>must haves</h4>
     <p>beef patties, sliced cheese and bun</p>
     <h4>good to have</h4>
     <p>pickles, tomatos, lettuce,bacon,egg,avocado</p>
-  </box>
+    </li>
     </section>
 
     
