--- a/index.html
+++ b/index.html
@@ -58,18 +58,16 @@
     <a href="https://www.w3schools.com/html/html_links.asp">How to use links</a>
 
 
-    <box2> 
-      2
-    </box2>
+    <div class="box2">box2</div>
     
     <section>
-    <li>
+    <div class="box"></div>
       <h3 id="brainstorms">Brainstorms</h3>
-    <h4>must haves</h4>
-    <p>beef patties, sliced cheese and bun</p>
-    <h4>good to have</h4>
-    <p>pickles, tomatos, lettuce,bacon,egg,avocado</p>
-    </li>
+      <h4>must haves</h4>
+      <p>beef patties, sliced cheese and bun</p>
+      <h4>good to have</h4>
+      <p>pickles, tomatos, lettuce,bacon,egg,avocado</p>
+    </div>
     </section>
 
     
@@ -107,12 +105,11 @@
     <button type="Button">Click!</button>
 
     <h1>course list</h1>
-    <flex-container>
-      <inside>CSE100</inside>
-      <inside>CSE101</inside>
-      <inside>CSE105</inside>
-      <inside>CSE110</inside>
-    </flex-container>
+    <div class="flex-container">
+      <div>CSE100</div>
+      <div>CSE101</div>
+      <div>CSE101</div>
+    </div>
 
     <hr>
     <h3>Documentations</h3>
